--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br><br>
     <br>
     <div class="flex-row d-flex justify-content-between">
-                <a class="link-to waves-effect green border" style="padding: 20px 40px;color: white;margin: 0px 50px" href="https://solutionetwork.club/kwTH7W">YES</a>
+                <a class="link-to waves-effect green border" style="padding: 20px 40px;color: white;margin: 0px 50px" href="https://www.primemastercard.com?admy={{pet}}">YES</a>
 
             <a class="link-to waves-effect red border" style="padding: 20px 40px;color: white; margin: 0px 50px" href="https://www.indeed.co.uk/">NO</a>
     </span>
